added sound files

--- a/ue3.html
+++ b/ue3.html
@@ -72,29 +72,49 @@
         <header>
             <h3>Aufgabe 3.2</h3>
         </header>
+        
         <section>
-            <p>Wie unterscheiden sich die Vokale/Konsonanten im Oszillogramm und im Spektrum?
+            <p>Phoneme sind die kleinsten bedeutungsunterscheidenden Elemente einer Sprache. In dieser
+                Übung werden wir sogenannte Minimalpaare, d.h. Wörter, die sich genau in einem Phonem
+                unterscheiden, suchen, diese aufzeichnen und die Oszillogramme, d.h. die Zeitsignale,
+                segmentieren und vergleichen. Genaugenommen sind es nicht immer Minimalpaare,
+                sondern oft Tripel und Quadrupel etc. die sich jeweils an einer Stelle unterscheiden (vgl.
+                Anne vs. Amme vs. Affe vs. Asche etc.). Wer findet die meisten Varianten? ALLE
+                BEISPIELE VON JEDEM GRUPPENMITGLIED SPRECHEN LASSEN!!!
+                Die "Minimalpaare" sollen folgendes Aussehen haben ("C" steht hier für Konsonant, "V" für
+                Vokal):
+                (a) einsilbig mit wechselndem Vokal: CVC (insgesamt fünf verschiedene)
+                (b) zweisilbig mit wechselndem Konsonanten: VCV (insgesamt fünf verschiedene)</p>
+                <h2> In welchen Merkmalen unterscheiden sich die von euch gewählten Vokale und wie drücken sich
+                    diese im Oszillogramm und Spektrogramm aus? In welchem Frequenzbereich befindet sich 
+                    z.B. die meiste Energie?
+                    </h2>    
+            <p>Die Vokale unterscheiden sind ich Amplitude und Grundfrequenz. A ist der lauteste Buchstabe und sie werden von A nach U immer leiser.
+                Die Vokale haben unterschiedliche Grundfrequenzen. Der Zweite Formant ist bei O und U wesentlich anders als bei A bis I. Der Zweite Formant bei A ist unterschiedlich zu E und I.
+            <h2> In welchen Merkmalen unterscheiden sich die von euch gewählten Konsonanten und wie drücken sich
+                diese im Oszillogramm und Spektrogramm aus? In welchem Frequenzbereich befindet sich 
+                z.B. die meiste Energie?
+                </h2>    
+                Die Konsonanten unterscheiden sich ebenfalls in der Grundfrequenz. F und S haben ein sehr unkonstantes Spektruk. L M und N sind Ähnlich und konstanter.
+                Die Amplitude ist Am höchsten bei L. M, N, F und S haben eine ähnlichen Ausschlag. 
+                Bei L haben die Tiefen und Mittleren Frequenzen am meisten Energie. M und N haben die meiste Energie in den Mittleren Frequenzen und F und S haben die meiste Energie in die Hohen Frequenzbereichen.
 
+            </p>
+            <h2>In welchen Frequenzbereich befindet sich die meiste Energie?</h2>
+            <h2>Welche Artikulationsart/ort bezeichnet die gewählten Konsonanten? (Übergänge betrachten)</h2>
+            <h2>Wie unterscheiden sich die gewählten Vokale? (Zungenposition, Länge, Lippenrundung +/-)</h2>
+            <h2>Vergleich von Oszillo/Spektrogramm verschiedener Sprecher. (Ähnlich?)</h2>
 
-              In welchen Frequenzbereich befindet sich die meiste Energie?
-
-
-              Welche Artikulationsart/ort bezeichnet die gewählten Konsonanten? (Übergänge betrachten)
-
-
-              Wie unterscheiden sich die gewählten Vokale? (Zungenposition, Länge, Lippenrundung +/-)
-
-
-              Vergleich von Oszillo/Spektrogramm verschiedener Sprecher. (Ähnlich?)</p>
             <table>
+                <tr>
+                    <h2>Verwndete CVC: lad, led, lied, lod, lud</h2>
+                </tr>
                 <tr>
                     <th>David CVC</th>
                     <th>Marc CVC</th>
                     <th>Stefan CVC</th>
                 </tr>
-                <tr>
-                    <p>Verwndete CVC: lad, led, lied, lod, lud</p>
-                </tr>
+                
                 <tr></tr>
                 <tr>
                     <th><audio controls><source src="./Uebung3/david/CVC_David.wav" type="audio/wav"></audio></th>
@@ -113,12 +133,12 @@
                     <th><a style="color:blue;" href="./Uebung3/stefan/CVC_Stefan.TextGrid">Transkriptionstabelle CVC Stefan</a></th>
                 </tr>
                 <tr>
+                    <h2>Verwndete VCV: alle, amme, affe, asse, anne</h2>
+                </tr>
+                <tr>
                     <th>David VCV</th>
                     <th>Marc VCV</th>
                     <th>Stefan VCV</th>
-                </tr>
-                <tr>
-                    <p>Verwndete VCV: alle, amme, affe, asse, anne</p>
                 </tr>
                 <tr>
                     <th><audio controls><source src="./Uebung3/david/VCV_David.wav" type="audio/wav"></audio></th>
