html überarbeitet, Aufgaben eingetragen und besser strukturiert

--- a/ue3.html
+++ b/ue3.html
@@ -33,12 +33,11 @@
     <h2>&Uuml;bung 3</h2>
     <article>
         <header>
-            <h3>Aufgabe 3.1</h3>
+            <h1>Aufgabe 3.1</h1>
         </header>
         <section>
             <p>Schreibe ein Matlab-Skript zur Berechnung eines Histogramms für eine Sprachdatei (Wertebereich -1 -> 1, Intervallgröße 0,1). Zeichne für jedes Gruppenmitglied mit PRAAT einen Satz (ca. 10 Wörter) auf und berechne jeweils die Histogramme (Pausen
-                vor und hinter dem Sprachsignal mit PRAAT abschneiden). Zeichne diese für die einzelnen Dateien graphisch in dasselbe Diagramm (x-Achse: Amplituden-Wertebereiche, y-Achse: Prozentangaben). Wie unterscheiden sich die ADVs der einzelnen
-                Dateien? Aus dem Histogramm läßt sich auch ablesen, wie gut die Aufnahmen ausgesteuert sind und ob das Signal einen DC-Offset hat. Wie?</p>
+                vor und hinter dem Sprachsignal mit PRAAT abschneiden). Zeichne diese für die einzelnen Dateien graphisch in dasselbe Diagramm (x-Achse: Amplituden-Wertebereiche, y-Achse: Prozentangaben). </p>
 
             <img src="./Uebung3/Aufgabe3.1.jpg" alt="" width="1200" height="600">
             <br>
@@ -70,51 +69,35 @@
     </article>
     <article>
         <header>
-            <h3>Aufgabe 3.2</h3>
+            <h1>Aufgabe 3.2</h1>
         </header>
-        
-        <section>
-            <p>Phoneme sind die kleinsten bedeutungsunterscheidenden Elemente einer Sprache. In dieser
-                Übung werden wir sogenannte Minimalpaare, d.h. Wörter, die sich genau in einem Phonem
-                unterscheiden, suchen, diese aufzeichnen und die Oszillogramme, d.h. die Zeitsignale,
-                segmentieren und vergleichen. Genaugenommen sind es nicht immer Minimalpaare,
-                sondern oft Tripel und Quadrupel etc. die sich jeweils an einer Stelle unterscheiden (vgl.
-                Anne vs. Amme vs. Affe vs. Asche etc.). Wer findet die meisten Varianten? ALLE
-                BEISPIELE VON JEDEM GRUPPENMITGLIED SPRECHEN LASSEN!!!
-                Die "Minimalpaare" sollen folgendes Aussehen haben ("C" steht hier für Konsonant, "V" für
-                Vokal):
-                (a) einsilbig mit wechselndem Vokal: CVC (insgesamt fünf verschiedene)
-                (b) zweisilbig mit wechselndem Konsonanten: VCV (insgesamt fünf verschiedene)</p>
-                <h2> In welchen Merkmalen unterscheiden sich die von euch gewählten Vokale und wie drücken sich
-                    diese im Oszillogramm und Spektrogramm aus? In welchem Frequenzbereich befindet sich 
-                    z.B. die meiste Energie?
-                    </h2>    
-            <p>Die Vokale unterscheiden sind ich Amplitude und Grundfrequenz. A ist der lauteste Buchstabe und sie werden von A nach U immer leiser.
-                Die Vokale haben unterschiedliche Grundfrequenzen. Der Zweite Formant ist bei O und U wesentlich anders als bei A bis I. Der Zweite Formant bei A ist unterschiedlich zu E und I.
-            <h2> In welchen Merkmalen unterscheiden sich die von euch gewählten Konsonanten und wie drücken sich
-                diese im Oszillogramm und Spektrogramm aus? In welchem Frequenzbereich befindet sich 
-                z.B. die meiste Energie?
-                </h2>    
-                Die Konsonanten unterscheiden sich ebenfalls in der Grundfrequenz. F und S haben ein sehr unkonstantes Spektruk. L M und N sind Ähnlich und konstanter.
-                Die Amplitude ist Am höchsten bei L. M, N, F und S haben eine ähnlichen Ausschlag. 
-                Bei L haben die Tiefen und Mittleren Frequenzen am meisten Energie. M und N haben die meiste Energie in den Mittleren Frequenzen und F und S haben die meiste Energie in die Hohen Frequenzbereichen.
 
+        <section>
+            <p>
+              In dieser Übung werden wir sogenannte Minimalpaare, d.h. Wörter, die sich genau in einem Phonem
+              unterscheiden, suchen, diese aufzeichnen und die Oszillogramme, d.h. die Zeitsignale,
+              segmentieren und vergleichen. Genaugenommen sind es nicht immer Minimalpaare,
+              sondern oft Tripel und Quadrupel etc. die sich jeweils an einer Stelle unterscheiden (vgl.
+              Anne vs. Amme vs. Affe vs. Asche etc.). Wer findet die meisten Varianten? ALLE
+              BEISPIELE VON JEDEM GRUPPENMITGLIED SPRECHEN LASSEN!!!
+              Die "Minimalpaare" sollen folgendes Aussehen haben ("C" steht hier für Konsonant, "V" für
+              Vokal):
+              <br>
+              (a) einsilbig mit wechselndem Vokal: CVC (insgesamt fünf verschiedene)
+              <br>
+              (b) zweisilbig mit wechselndem Konsonanten: VCV (insgesamt fünf verschiedene)
             </p>
-            <h2>In welchen Frequenzbereich befindet sich die meiste Energie?</h2>
-            <h2>Welche Artikulationsart/ort bezeichnet die gewählten Konsonanten? (Übergänge betrachten)</h2>
-            <h2>Wie unterscheiden sich die gewählten Vokale? (Zungenposition, Länge, Lippenrundung +/-)</h2>
-            <h2>Vergleich von Oszillo/Spektrogramm verschiedener Sprecher. (Ähnlich?)</h2>
 
             <table>
                 <tr>
-                    <h2>Verwndete CVC: lad, led, lied, lod, lud</h2>
+                    <h2>Verwendete CVC: lad, led, lied, lod, lud</h2>
                 </tr>
                 <tr>
                     <th>David CVC</th>
                     <th>Marc CVC</th>
                     <th>Stefan CVC</th>
                 </tr>
-                
+
                 <tr></tr>
                 <tr>
                     <th><audio controls><source src="./Uebung3/david/CVC_David.wav" type="audio/wav"></audio></th>
@@ -133,7 +116,7 @@
                     <th><a style="color:blue;" href="./Uebung3/stefan/CVC_Stefan.TextGrid">Transkriptionstabelle CVC Stefan</a></th>
                 </tr>
                 <tr>
-                    <h2>Verwndete VCV: alle, amme, affe, asse, anne</h2>
+                    <h2>Verwendete VCV: alle, amme, affe, asse, anne</h2>
                 </tr>
                 <tr>
                     <th>David VCV</th>
@@ -157,9 +140,74 @@
                     <th><a style="color:blue;" href="./Uebung3/stefan/VCV_Stefan.TextGrid">Transkriptionstabelle VCV Stefan</a></th>
                 </tr>
             </table>
+
+            <h2>
+              In welchen Merkmalen unterscheiden sich die von euch gewählten Vokale und wie drücken sich
+              diese im Oszillogramm und Spektrogramm aus? In welchem Frequenzbereich befindet sich
+              z.B. die meiste Energie?
+            </h2>
+            <p>
+              Die Vokale unterscheiden sind ich Amplitude und Grundfrequenz. A ist der lauteste Buchstabe und sie werden von A nach U immer leiser.
+              Die Vokale haben unterschiedliche Grundfrequenzen. Der Zweite Formant ist bei O und U wesentlich anders als bei A bis I. Der Zweite Formant bei A ist unterschiedlich zu E und I.
+            </p>
+
+            <h2>
+              In welchen Merkmalen unterscheiden sich die von euch gewählten Konsonanten und wie drücken sich
+              diese im Oszillogramm und Spektrogramm aus? In welchem Frequenzbereich befindet sich
+              z.B. die meiste Energie?
+            </h2>
+            <p>
+              Die Konsonanten unterscheiden sich ebenfalls in der Grundfrequenz. F und S haben ein sehr unkonstantes Spektruk. L M und N sind Ähnlich und konstanter.
+              Die Amplitude ist Am höchsten bei L. M, N, F und S haben eine ähnlichen Ausschlag.
+              Bei L haben die Tiefen und Mittleren Frequenzen am meisten Energie. M und N haben die meiste Energie in den Mittleren Frequenzen und F und S haben die meiste Energie in die Hohen Frequenzbereichen.
+            </p>
+
+            <h2>
+              Beachtet besonders genau die Übergänge V->C und C->V. Welche Artikulationsart, bzw. -
+              stelle bezeichnet die von euch gewählten Konsonanten? Am besten probiert man das an
+              sich selbst aus, d.h. die Lautfolge langsam sprechen und darauf achten, wie sich die Zunge
+              im Mundraum bewegt (vor->zurück, hoch->tief) etc.
+            </h2>
+            <p>
+              Antwort
+            </p>
+
+            <h2>
+              Wie unterscheiden sich die von euch gewählten Vokale (Zungenposition, Länge ->
+              ausmessen, Lippenrundung +/-)? Vergleicht die Oszillogramme/Spektrogramme
+              verschiedener Sprecher, ähneln sich diese für den gleichen Laut?
+            </h2>
+            <p>
+              Antwort
+            </p>
+
         </section>
+    </article>
+    <article>
+        <header>
+            <h1>Aufgabe 3.3</h1>
+        </header>
+
+        <section>
+            <p>
+              Die Aufgabe in unserer Übung besteht nun daran, für die einzelnen Teilnehmer
+              Formantkarten zu bestimmen. Dazu komplettieren wir die Vokale, die in den Beispielen aus
+              Übung 3.2 noch fehlten, messen die Formantfrequenzen und tragen sie in ein
+              Koordinatensystem ein (Plot der Formantfrequenzen für die Gruppenteilnehmer ins
+              Protokoll).
+            </p>
+
+            <h2>
+              Dabei sollten die Messwerte aus PRAAT kritisch betrachtet werden, da es
+              besonders bei hinteren Vokalen zu Fehlern, d.h. zur Vertauschung von Formanten kommen
+              kann. Die Werte in der Tabelle dienen daher auch als Orientierung. Bei Diphthongen wie [aI]
+              und [OY] hat die Messung in der Mitte keinen Sinn, sondern es müssen zwei Punkte, einer
+              am Anfang und einer am Ende des Vokals gemessen werden.
+            </h2>
+
+        </section>
+
     </article>
 
 </body>
-
 </html>
