--- a/ue3.html
+++ b/ue3.html
@@ -147,7 +147,7 @@
               z.B. die meiste Energie?
             </h2>
             <p>
-              Die Vokale unterscheiden sind ich Amplitude und Grundfrequenz. A ist der lauteste Buchstabe und sie werden von A nach U immer leiser.
+              Die Vokale unterscheiden sich in Amplitude und Grundfrequenz. A ist der lauteste Buchstabe und sie werden von A nach U immer leiser.
               Die Vokale haben unterschiedliche Grundfrequenzen. Der Zweite Formant ist bei O und U wesentlich anders als bei A bis I. Der Zweite Formant bei A ist unterschiedlich zu E und I.
             </p>
 
@@ -157,9 +157,9 @@
               z.B. die meiste Energie?
             </h2>
             <p>
-              Die Konsonanten unterscheiden sich ebenfalls in der Grundfrequenz. F und S haben ein sehr unkonstantes Spektruk. L M und N sind Ähnlich und konstanter.
+              Die Konsonanten unterscheiden sich ebenfalls in der Grundfrequenz. F und S haben ein sehr unkonstantes Spektrum. L, M und N sind ähnlich und konstanter.
               Die Amplitude ist Am höchsten bei L. M, N, F und S haben eine ähnlichen Ausschlag.
-              Bei L haben die Tiefen und Mittleren Frequenzen am meisten Energie. M und N haben die meiste Energie in den Mittleren Frequenzen und F und S haben die meiste Energie in die Hohen Frequenzbereichen.
+              Bei L haben die Tiefen und Mittleren Frequenzen am meisten Energie. M und N haben die meiste Energie in den Mittleren Frequenzen und F und S haben die meiste Energie in den hohen Frequenzbereichen.
             </p>
 
             <h2>
@@ -169,7 +169,16 @@
               im Mundraum bewegt (vor->zurück, hoch->tief) etc.
             </h2>
             <p>
-              Antwort
+              Die Art des Konsonanten l ist Lateral, sein Ort alveolar. Lateral bedeutet seitlich, heißt dass der Laut an den Seiten der Zunge vorbeigeht. Alveolar heißt, dass die Zunge an die Zähne geht.
+              Beim aussprechen von alle bewegt sich die Zunge von hinten nach vorne. Für das l wird die Zunge an den Zahn gehoben und für das e dann der Raum wieder geöffnet.
+              Die Art des Konsonanten m ist nasal. Der Laut wird mit verschlossenem Mund ausgesprochen und tritt über die Nase aus. Der Ort ist bilabial, also mit beiden Lippen. Die Lippen werden beim erzeugen des Lautes zusammengepresst.
+              Beim aussprechen von amme bewegt sich die Zunge wenig.
+              Die Art des Konsonanten f ist frikativ. Heißt er wird erzeugt durch ein rauschen. Der Ort des Lautes ist Labiodental, heißt er wird erzeugt mithilfe der Lippen und Zähne. Beim f werden die Lippen zusammengezogen und die Zähne ebenso, dass der Austrittskanal klein, aber nicht verschlossen ist.
+              Auch beim aussprechen von affe wird die Zunge wenig bewegt.
+              Die Art des Konsonanten s ist frikativ und alveolar. Beim erzeugen des s wird im Gegensatz zum bereits beschriebenen l die Zunge nicht komplett an den Zahn geführt.
+              Beim aussprechen von asse wird die Zunge wieder von hinten tief nach vorne hoch bewegt. Dann aber für den Übergang zum letzten Vokal wieder abgesenkt.
+              Die Art des Konsonanten n ist nasal und alveolar. Der Laut strömt aus der Nase und die Zunge drückt sich an den Zahn.
+              Beim aussprechen von anne geschieht das gleiche wie bei asse, was wohl daran liegt das beide alveolar sind.
             </p>
 
             <h2>
