--- a/ue3.html
+++ b/ue3.html
@@ -187,7 +187,13 @@
               verschiedener Sprecher, ähneln sich diese für den gleichen Laut?
             </h2>
             <p>
-              Antwort
+              Bei lad wird der Laut eher hinten erzeugt, und der Mund ist geöffnet. Da die Zunge beim a: im Mundraum liegt, ist eher keine Rundung vorhanden.
+              Bei led wird der Laut eher vorne erzeugt. Die Lippen sind im gezug zum a: kaum geöffnet.
+              Bei lied wird der Laut noch weiter vorne produziert. Die Lippen sind wie beim e: fast geschlossen.
+              Bei lod wird der Laut hinten erzeugt und die Lippen bleiben weitestgehend geschlossen.
+              Bei lud wird der Laut auch hinten erzeugt und die Lippen bleiben ebenso weitestgehend geschlossen. u: und o: liegen somit nah beieinander.
+
+              Man erkennt in den Oszillogramme/Spektrogramme von PRAAT schon Ähnlichkeiten bei den Lauten. Die Form der Formanten ist ähnlich, allerdings ist deren Energie unterschiedlich. David und Stefan haben ähnlich viel Energie bei der Aussprache der Laute verwendet. Marc eher weniger.
             </p>
 
         </section>
