added images and wav files to the html

--- a/ue3.html
+++ b/ue3.html
@@ -39,7 +39,7 @@
             <p>Schreibe ein Matlab-Skript zur Berechnung eines Histogramms für eine Sprachdatei (Wertebereich -1 -> 1, Intervallgröße 0,1). Zeichne für jedes Gruppenmitglied mit PRAAT einen Satz (ca. 10 Wörter) auf und berechne jeweils die Histogramme (Pausen
                 vor und hinter dem Sprachsignal mit PRAAT abschneiden). Zeichne diese für die einzelnen Dateien graphisch in dasselbe Diagramm (x-Achse: Amplituden-Wertebereiche, y-Achse: Prozentangaben). </p>
 
-            <img src="./Uebung3/Aufgabe3.1.jpg" alt="" width="1200" height="600">
+            <img src="./Uebung3/Aufgabe3.1.jpg">
             <br>
             <table>
                 <tr>
@@ -231,7 +231,20 @@
               Koordinatensystem ein (Plot der Formantfrequenzen für die Gruppenteilnehmer ins
               Protokoll).
             </p>
+            <img src="./Uebung3/formanten.jpg">
+            <table>
+                <tr>
+                    <th>Fehlende Formanten David</th>
+                    <th>Fehlende Formanten Marc</th>
+                    <th>Fehlende Formanten Stefan</th>
+                </tr>
+                <tr>
+                    <th><audio controls><source src="./Uebung3/david/David_Formanten.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung3/marc/Marc_Formanten.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung3/stefan/Stefan_Formanten.wav" type="audio/wav"></audio></th>
 
+                </tr>
+            </table>
             <h2>
               Dabei sollten die Messwerte aus PRAAT kritisch betrachtet werden, da es
               besonders bei hinteren Vokalen zu Fehlern, d.h. zur Vertauschung von Formanten kommen
