added the histogram picture with 0.1 tick inverval

--- a/ue3.html
+++ b/ue3.html
@@ -39,7 +39,7 @@
             <p>Schreibe ein Matlab-Skript zur Berechnung eines Histogramms für eine Sprachdatei (Wertebereich -1 -> 1, Intervallgröße 0,1). Zeichne für jedes Gruppenmitglied mit PRAAT einen Satz (ca. 10 Wörter) auf und berechne jeweils die Histogramme (Pausen
                 vor und hinter dem Sprachsignal mit PRAAT abschneiden). Zeichne diese für die einzelnen Dateien graphisch in dasselbe Diagramm (x-Achse: Amplituden-Wertebereiche, y-Achse: Prozentangaben). </p>
 
-            <img src="./Uebung3/Aufgabe3.1.jpg">
+            <img src="./Uebung3/Aufgabe3.1.jpg" width="960" height="540">
             <br>
             <table>
                 <tr>
@@ -231,7 +231,7 @@
               Koordinatensystem ein (Plot der Formantfrequenzen für die Gruppenteilnehmer ins
               Protokoll).
             </p>
-            <img src="./Uebung3/formanten.jpg">
+            <img src="./Uebung3/formanten.jpg" width="960" height="540">
             <table>
                 <tr>
                     <th>Fehlende Formanten David</th>
