--- a/ue3.html
+++ b/ue3.html
@@ -167,8 +167,24 @@
               z.B. die meiste Energie?
             </h2>
             <p>
-              Die Vokale unterscheiden sich in Amplitude und Grundfrequenz. A ist der lauteste Buchstabe und sie werden von A nach U immer leiser.
-              Die Vokale haben unterschiedliche Grundfrequenzen. Der Zweite Formant ist bei O und U wesentlich anders als bei A bis I. Der Zweite Formant bei A ist unterschiedlich zu E und I.
+              Die Vokale unterscheiden sich in Amplitude und Grundfrequenz. A ist der lauteste
+              Buchstabe und sie werden von A nach U immer leiser. Dies liegt wahrscheinlich daran,
+              das die Stimme bei einer Aufzählung leiser wird. Der 2. Formant ist bei e: und i:
+              nach oben gewölbt. Im Gegensatz dazu ist der 2. Formant bei a:, o: und u: nach unten
+              gewölbt. (aufgrund größerer Aussteuerung gut bei David erkennbar)
+            </p>
+            <p>
+              Die Oszillogramme sind stark vom Sprecher abhängig. a: ist noch bei allen tendenziell
+              abnehmen aber bereits bei e: zeigen sich Unterschiede. e: ist bei Marc abnehmend, aber bei
+              David und Stefan konstant. i: ist bei David konstant, bei Marc abnehmend und bei Stefan
+              ansteigend. o: ist bei allen zur Mitte des Phonems abnehmend und dann wieder zunehmend.
+              u: ist bei Marc und David abnehmend und bei Stefan zunehmend.
+            </p>
+            <p>
+              Die meiste Energie der Vokale wurde aufgrund der starken Abweichungen zwischen Sprechern
+              im folgenden geschätzt. Für a: befindet sich diese bei ca. 1000hz, für e: bei ca. 3000hz,
+              für i: bei ca. 3500hz, für o: bei ca. 750hz und für u: bei ca. 500hz. Die meiste Energie
+              befand sich jeweils in den verschiedenen Obertönen.
             </p>
 
             <h2>
@@ -177,9 +193,18 @@
               z.B. die meiste Energie?
             </h2>
             <p>
-              Die Konsonanten unterscheiden sich ebenfalls in der Grundfrequenz. F und S haben ein sehr unkonstantes Spektrum. L, M und N sind ähnlich und konstanter.
-              Die Amplitude ist Am höchsten bei L. M, N, F und S haben eine ähnlichen Ausschlag.
-              Bei L haben die Tiefen und Mittleren Frequenzen am meisten Energie. M und N haben die meiste Energie in den Mittleren Frequenzen und F und S haben die meiste Energie in den hohen Frequenzbereichen.
+              Die Konsonanten unterscheiden sich stark voneinander, sind aber grob in 2 Gruppen einteilbar.
+              So ist sowohl das Spektrum von f als auch von s sehr durchmischt (da keine stimmhafte Phoneme).
+              Die Aussteuerung ist größer bei s. Es gibt aber große Unterschiede zwischen den Sprechern, so
+              sind zb. f und s sehr viel lauter bei Marc als bei Stefan. Spektrum und Oszillogramm von n und m
+              sehen sehr ähnlich aus. Die Grundfrequenz von n ist jedoch tiefer als bei m. Das Spektrum von l
+              ähnelt dem von n, das Oszillogramm ist aber bei allen Sprechern exponentiell abnehmend, anders als
+              bei den anderen Konsonanten, dessen Oszillogramm bei allen Sprechern ungefähr konstant ist.
+            </p>
+            <p>
+              Bei L haben die Tiefen und Mittleren Frequenzen am meisten Energie. Das Spektrum ist in ca. 3000hz
+              und 1000hz geteilt. M und N haben die meiste Energie in den Mittleren Frequenzen (beide ca, bei 2500hz)
+              und F und S haben die meiste Energie in den hohen Frequenzbereichen. (ca. 3500hz für f und 5000hz für s)
             </p>
 
             <h2>
