Auswertung zu 3.3 geschrieben

--- a/ue3.html
+++ b/ue3.html
@@ -278,6 +278,14 @@
               und [OY] hat die Messung in der Mitte keinen Sinn, sondern es müssen zwei Punkte, einer
               am Anfang und einer am Ende des Vokals gemessen werden.
             </h2>
+            <p>
+              In unserer Formantenkarte kommen wir auf plausible Ergebnisse. Es gibt hier und da
+              Abweichungen der Formantenfrequenzen gleicher Phoneme, welche aber auf Unterschiede
+              der Stimme der Sprecher zurückführbar sind. Da es sich bei der Referenzkarte um einen
+              Mittelwert handelt gibt es Abweichungen von dieser. Die relative Lage der Phoneme
+              zueinander stimmt aber überein. Wir schließen daraus, das es keine Fehler seitens
+              PRAAT bei der Bestimmung der Formantenfrequenzen gab.
+            </p>
 
         </section>
 
