--- a/ue4.html
+++ b/ue4.html
@@ -369,7 +369,33 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                 werden müssen mindestens je Analyseblock (also z.B. je 25ms) die Koeffizienten (Zahl
                 entspricht der Filterordnung) und die Grundfrequenz f0. Setze hier jeweils pro Zahlenwert
                 16bit an. Vergleiche diese Datenrate mit der ursprünglichen PCM-Datenrate der Sprachdatei.</p>
-                <table><p style="color:red; font-size:50px;">TODO HIER MUSS NOCH DIE BERECHNUNG REIN</p></table>
+                <table>
+                    <tr>
+                        <th>Original PCM: 16 * 16000 = 256.000 Bit/s</th>
+                    </tr>
+                    <tr>
+                        <th>16/25: 10880 Bit/s</th>
+                        <th>16/50: 5440 Bit/s</th>
+                        <th>16/100: 2720 Bit/s</th>
+                    </tr>
+                    <tr>
+                        <th>10/25: 7040 Bit/s</th>
+                        <th>10/50: 3520 Bit/s</th>
+                        <th>10/100: 1760 Bit/s</th>
+                    </tr>
+                    <tr>
+                        <th>6/25: 4480 Bit/s</th>
+                        <th>6/50: 2240 Bit/s</th>
+                        <th>6/100: 1120 Bit/s</th>
+                    </tr>
+                    <tr>
+                        <th>1/25: 1280 Bit/s</th>
+                        <th>1/50: 640 Bit/s</th>
+                        <th>1/100: 320 Bit/s</th>
+                    </tr>
+                    <th><a style="color:blue;" href="./Uebung4/datenrate4_3.m">Matlab-Skript zur berechnung</a></th>
+                </table>
+                <p>Die ursprüngliche PCM-Datenrate betrug 256.000 Bit/s mit 16/25 unserer höchsten Datenrate haben wir nur 10.880 Bits/s was eine 23,5 fache verringerung ist.</p>
         </section>
     </article>
     <article>
